--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,11 @@
     "type": "project",
     "autoload": {
         "psr-4": {
-            "Kikopolis\\CustomerCrud\\": "src/"
-        }
+            "Kikopolis\\CustomerCrud\\": "app/"
+        },
+        "files": [
+            "./app/Helper/functions.php"
+        ]
     },
     "authors": [
         {
@@ -14,5 +17,13 @@
     ],
     "require-dev": {
         "phpunit/phpunit": "^10.4"
+    },
+    "require": {
+        "php": "^8.2",
+        "symfony/http-kernel": "^7.0",
+        "symfony/dotenv": "^7.0",
+        "symfony/routing": "^7.0",
+        "symfony/http-foundation": "^7.0",
+        "ext-pdo": "*"
     }
 }
